menu bar smaller to fix overflow

--- a/app/assets/stylesheets/tutorial.css.scss
+++ b/app/assets/stylesheets/tutorial.css.scss
@@ -169,7 +169,7 @@
   background: #85bc99;
   float:right;
   color: "white";
-  width:900px;
+  width:700px;
   overflow: hidden;
   height: 45px;
   position:relative;
